# 1Panel-cli

./: .gitignore  README.md  README.zh.md  doc.json  package.json
.github/workflows/: release-musl.yml
rust/1panel-cli/: Cargo.toml  README.md
rust/1panel-cli/src/: deploy.rs  main.rs  onepanel.rs  static_site.rs
skills/1panel-cli-ai/: SKILL.md
skills/1panel-rust-cli/: SKILL.md
src/: api.mjs  index.mjs
