[package]
name = "onepanel-cli"
version = "0.1.0"
edition = "2024"
description = "Standalone 1Panel deployment CLI for CI"
license = "MIT"

[[bin]]
name = "1panel-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"] }
md5 = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["charset", "json", "multipart", "stream", "default-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs"] }
